refactor(errors): unified ErrorResponse with ErrorCode, typed exceptions