@@ -2,10 +2,10 @@ package com.acj.acjsignature.mobile.androidws.service.impl;
 
 import com.acj.acjsignature.mobile.androidws.dto.response.DniResponse;
 import com.acj.acjsignature.mobile.androidws.exception.BusinessException;
+import com.acj.acjsignature.mobile.androidws.exception.ErrorCode;
 import com.acj.acjsignature.mobile.androidws.service.DniService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -24,35 +24,28 @@ import org.springframework.web.client.RestTemplate;
 public class DniServiceImpl implements DniService {
 
     private final RestTemplate restTemplate;
-
-    @Value("${app.reniec.api-url:https://api.decolecta.com/v1/reniec/dni}")
-    private String reniecApiUrl;
-
-    @Value("${app.reniec.api-token:sk_14760.35ybuCqfqMkbuwxk4mScYsGmG3TPKorR}")
-    private String reniecApiToken;
+    private final com.acj.acjsignature.mobile.androidws.config.AppProperties appProperties;
 
     @Override
     public DniResponse consultarDni(String numero) {
         log.info("Consultando DNI: {}", numero);
 
-        // Validar que el token esté configurado
-        if (reniecApiToken == null || reniecApiToken.trim().isEmpty()) {
+        String token = appProperties.getReniec().getApiToken();
+        if (token == null || token.isBlank()) {
             log.error("Token de RENIEC no configurado");
-            throw new BusinessException("Servicio de RENIEC no disponible: token no configurado");
+            throw new BusinessException(ErrorCode.RENIEC_NOT_CONFIGURED,
+                "Servicio de RENIEC no disponible: token no configurado");
         }
 
         try {
-            // Construir URL con parámetro de DNI
-            String url = reniecApiUrl + "?numero=" + numero;
+            String url = appProperties.getReniec().getApiUrl() + "?numero=" + numero;
 
-            // Preparar headers
             HttpHeaders headers = new HttpHeaders();
             headers.set("Content-Type", "application/json");
-            headers.set("Authorization", "Bearer " + reniecApiToken);
+            headers.set("Authorization", "Bearer " + token);
 
             HttpEntity<String> entity = new HttpEntity<>(headers);
 
-            // Realizar petición GET a RENIEC
             ResponseEntity<DniResponse> response = restTemplate.exchange(
                 url,
                 HttpMethod.GET,
@@ -64,25 +57,28 @@ public class DniServiceImpl implements DniService {
             return response.getBody();
 
         } catch (HttpClientErrorException.BadRequest ex) {
-            log.warn("Solicitud inválida a RENIEC para DNI: {}", numero);
-            throw new BusinessException("Número de DNI inválido");
+            log.warn("Solicitud invalida a RENIEC para DNI: {}", numero);
+            throw new BusinessException(ErrorCode.RENIEC_BAD_REQUEST, "Numero de DNI invalido");
 
         } catch (HttpClientErrorException.NotFound ex) {
             log.warn("DNI no encontrado en RENIEC: {}", numero);
-            throw new BusinessException("DNI no encontrado en RENIEC");
+            throw new BusinessException(ErrorCode.DNI_NOT_FOUND,
+                ErrorCode.DNI_NOT_FOUND.getDefaultMessage());
 
         } catch (HttpClientErrorException.Unauthorized ex) {
-            log.error("Token de RENIEC inválido o expirado");
-            throw new BusinessException("Error de autenticación con RENIEC");
+            log.error("Token de RENIEC invalido o expirado");
+            throw new BusinessException(ErrorCode.RENIEC_UNAUTHORIZED,
+                ErrorCode.RENIEC_UNAUTHORIZED.getDefaultMessage());
 
         } catch (HttpClientErrorException ex) {
             log.error("Error en solicitud a RENIEC: {} {}", ex.getStatusCode(), ex.getMessage());
-            throw new BusinessException("Error al consultar RENIEC: " + ex.getStatusCode());
+            throw new BusinessException(ErrorCode.RENIEC_ERROR,
+                "Error al consultar RENIEC: " + ex.getStatusCode());
 
         } catch (Exception ex) {
             log.error("Error inesperado al consultar RENIEC para DNI: {}", numero, ex);
-            throw new BusinessException("Error al consultar servicio RENIEC");
+            throw new BusinessException(ErrorCode.RENIEC_ERROR,
+                ErrorCode.RENIEC_ERROR.getDefaultMessage());
         }
     }
 }
-
